--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,24 +13,19 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2021-05-01 周六 18:00 ++1w> DEADLINE: <2021-05-03 周一 12:00 ++1w>
-:PROPERTIES:
-:STYLE:    habit
-:LAST_REPEAT: [2021-04-25 周日 21:56]
-:END:
-- State "DONE"       from "TODO"       [2021-04-25 周日 21:56]
-- State "DONE"       from "TODO"       [2021-04-17 周六 23:29]
-- State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
-- State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
-- State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-05-09 周日 19:00 ++1d> DEADLINE: <2021-05-09 周日 23:59 ++1d>
+SCHEDULED: <2021-05-14 周五 19:00 ++1d> DEADLINE: <2021-05-14 周五 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-08 周六 23:53]
+:LAST_REPEAT: [2021-05-13 周四 23:25]
 :END:
 
+- State "DONE"       from "TODO"       [2021-05-13 周四 23:25]
+- State "DONE"       from "TODO"       [2021-05-12 周三 21:21]
+- State "DONE"       from "TODO"       [2021-05-11 周二 21:16]
+- State "DONE"       from "TODO"       [2021-05-10 周一 20:16]
+- State "CANCELED"   from "TODO"       [2021-05-09 周日 10:05] \\
+  放假
 - State "DONE"       from "TODO"       [2021-05-08 周六 23:53]
 - State "DONE"       from "TODO"       [2021-05-07 周五 23:20]
 - State "DONE"       from "TODO"       [2021-05-06 周四 22:59]
@@ -80,14 +75,32 @@ SCHEDULED: <2021-05-09 周日 19:00 ++1d> DEADLINE: <2021-05-09 周日 23:59 ++1
 - State "DONE"       from "TODO"       [2021-03-31 周三 20:50]
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
+** TODO [#A] 完成每周周报                                            :work:
+SCHEDULED: <2021-05-15 周六 18:00 ++1w> DEADLINE: <2021-05-17 周一 12:00 ++1w>
+:PROPERTIES:
+:STYLE:    habit
+:LAST_REPEAT: [2021-05-09 周日 23:58]
+:END:
+- State "DONE"       from "TODO"       [2021-05-09 周日 23:58]
+- State "DONE"       from "TODO"       [2021-05-03 周一 22:50]
+- State "DONE"       from "TODO"       [2021-04-25 周日 21:56]
+- State "DONE"       from "TODO"       [2021-04-17 周六 23:29]
+- State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
+- State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
+- State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-05-09 周日 19:00 ++1d>
+SCHEDULED: <2021-05-14 周五 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-08 周六 09:30]
+:LAST_REPEAT: [2021-05-13 周四 09:00]
 :END:
+- State "DONE"       from "TODO"       [2021-05-13 周四 09:00]
+- State "DONE"       from "TODO"       [2021-05-12 周三 09:18]
+- State "DONE"       from "TODO"       [2021-05-11 周二 08:55]
+- State "DONE"       from "TODO"       [2021-05-10 周一 09:00]
+- State "DONE"       from "TODO"       [2021-05-09 周日 10:05]
 - State "DONE"       from "TODO"       [2021-05-08 周六 09:30]
 - State "DONE"       from "TODO"       [2021-05-07 周五 09:18]
 - State "DONE"       from "TODO"       [2021-05-06 周四 23:04]
@@ -129,12 +142,45 @@ SCHEDULED: <2021-05-09 周日 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** DONE [#C] 学习 org-mode                                          :learn:
+** TODO [#A] 学习《游戏编程模式》                            :learn:ATTACH:
+SCHEDULED: <2021-05-14 周五 09:00 ++1d>
+:PROPERTIES:
+:ID:       b2e6045c-58c3-4359-90d4-74fb2660b8da
+:ATTACH: [[attachment:游戏编程模式.org][游戏编程模式笔记]]
+:STYLE:    habit
+:LAST_REPEAT: [2021-05-12 周三 21:21]
+:END:
+- State "CANCELED"   from "TODO"       [2021-05-12 周三 21:21] \\
+  没时间
+- State "DONE"       from "TODO"       [2021-05-10 周一 11:09]
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] 解决导表编辑器生成bug                                 :learn:
+CLOSED: [2021-05-09 周日 10:05]
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-05-09 周日 10:16
+:END:
+- State "DONE"       from "TODO"       [2021-05-09 周日 10:05]
+Scheduled: <2021-05-08 周六 19:00>
+:LOGBOOK:
+CLOCK: [2021-05-08 周六 22:22]--[2021-05-08 周六 22:47] =>  0:25
+CLOCK: [2021-05-08 周六 21:52]--[2021-05-08 周六 22:17] =>  0:25
+CLOCK: [2021-05-08 周六 21:22]--[2021-05-08 周六 21:47] =>  0:25
+CLOCK: [2021-05-08 周六 20:47]--[2021-05-08 周六 21:12] =>  0:25
+CLOCK: [2021-05-08 周六 20:17]--[2021-05-08 周六 20:42] =>  0:25
+CLOCK: [2021-05-08 周六 19:47]--[2021-05-08 周六 20:12] =>  0:25
+CLOCK: [2021-05-08 周六 19:17]--[2021-05-08 周六 19:42] =>  0:25
+CLOCK: [2021-05-08 周六 18:42]--[2021-05-08 周六 19:07] =>  0:25
+CLOCK: [2021-05-08 周六 18:12]--[2021-05-08 周六 18:37] =>  0:25
+CLOCK: [2021-05-08 周六 17:42]--[2021-05-08 周六 18:07] =>  0:25
+CLOCK: [2021-05-08 周六 17:12]--[2021-05-08 周六 17:37] =>  0:25
+:END:
+*** DONE [#C] 学习 org-mode                                         :learn:
 CLOSED: [2021-05-06 周四 08:46] SCHEDULED: <2021-05-06 周四 19:00>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
 :LAST_REPEAT: [2021-05-05 周三 11:25]
+:ARCHIVE_TIME: 2021-05-09 周日 10:16
 :END:
 - State "DONE"       from "TODO"       [2021-05-06 周四 08:46]
 - State "DONE"       from "TODO"       [2021-05-05 周三 11:25]
@@ -169,8 +215,11 @@ CLOSED: [2021-05-06 周四 08:46] SCHEDULED: <2021-05-06 周四 19:00>
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:55]
 - State "DONE"       from "TODO"       [2021-04-04 周日 14:36]
 - State "DONE"       from "TODO"       [2021-04-03 周六 15:56]
-** DONE [#A] 完善英雄山代码                                          :work:
+*** DONE [#A] 完善英雄山代码                                         :work:
 CLOSED: [2021-05-08 周六 22:36] SCHEDULED: <2021-05-08 周六 09:40>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-05-09 周日 10:16
+:END:
 - State "DONE"       from "TODO"       [2021-05-08 周六 22:36]
 :LOGBOOK:
 CLOCK: [2021-05-08 周六 23:27]--[2021-05-08 周六 23:52] =>  0:25
@@ -180,20 +229,14 @@ CLOCK: [2021-05-08 周六 10:33]--[2021-05-08 周六 10:58] =>  0:25
 CLOCK: [2021-05-08 周六 10:03]--[2021-05-08 周六 10:28] =>  0:25
 CLOCK: [2021-05-08 周六 09:33]--[2021-05-08 周六 09:58] =>  0:25
 :END:
-** TODO [#A] 解决导表编辑器生成bug                                  :learn:
-Scheduled: <2021-05-08 周六 19:00>
+** DONE [#A] 客户端本地处理容错                                      :work:
+CLOSED: [2021-05-10 周一 14:41] SCHEDULED: <2021-05-10 周一 09:30>
+- State "DONE"       from "TODO"       [2021-05-10 周一 14:41]
 :LOGBOOK:
-CLOCK: [2021-05-08 周六 22:22]--[2021-05-08 周六 22:47] =>  0:25
-CLOCK: [2021-05-08 周六 21:52]--[2021-05-08 周六 22:17] =>  0:25
-CLOCK: [2021-05-08 周六 21:22]--[2021-05-08 周六 21:47] =>  0:25
-CLOCK: [2021-05-08 周六 20:47]--[2021-05-08 周六 21:12] =>  0:25
-CLOCK: [2021-05-08 周六 20:17]--[2021-05-08 周六 20:42] =>  0:25
-CLOCK: [2021-05-08 周六 19:47]--[2021-05-08 周六 20:12] =>  0:25
-CLOCK: [2021-05-08 周六 19:17]--[2021-05-08 周六 19:42] =>  0:25
-CLOCK: [2021-05-08 周六 18:42]--[2021-05-08 周六 19:07] =>  0:25
-CLOCK: [2021-05-08 周六 18:12]--[2021-05-08 周六 18:37] =>  0:25
-CLOCK: [2021-05-08 周六 17:42]--[2021-05-08 周六 18:07] =>  0:25
-CLOCK: [2021-05-08 周六 17:12]--[2021-05-08 周六 17:37] =>  0:25
+CLOCK: [2021-05-10 周一 14:09]--[2021-05-10 周一 14:34] =>  0:25
+CLOCK: [2021-05-10 周一 13:39]--[2021-05-10 周一 14:04] =>  0:25
+CLOCK: [2021-05-10 周一 13:09]--[2021-05-10 周一 13:34] =>  0:25
+CLOCK: [2021-05-10 周一 11:10]--[2021-05-10 周一 11:35] =>  0:25
 :END:
 * Appointment
 ** WAIT 组装一台性价比高的台式机用于开发和娱乐               :learn:future:
@@ -219,6 +262,52 @@ DEADLINE: <2021-10-01 周五>
 |   | earphone    |     0 |       |       |
 #+TBLFM: $3 = $4
 * Project
+** SCH [#A] 制作真机包                                               :work:
+SCHEDULED: <2021-05-10 周一 15:00> DEADLINE: <2021-05-15 周六 18:00>
+:PROPERTIES:
+:BLOCKER: children
+:END:                          
+*** DONE 学习真机包导出流程
+CLOSED: [2021-05-11 周二 13:08] SCHEDULED: <2021-05-10 周一 16:00>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+- State "DONE"       from "TODO"       [2021-05-11 周二 13:08]
+:LOGBOOK:
+CLOCK: [2021-05-10 周一 17:20]--[2021-05-10 周一 17:45] =>  0:25
+CLOCK: [2021-05-10 周一 16:50]--[2021-05-10 周一 17:15] =>  0:25
+CLOCK: [2021-05-10 周一 16:20]--[2021-05-10 周一 16:45] =>  0:25
+:END:
+*** DONE 配置android工程                                           :ATTACH:
+CLOSED: [2021-05-14 周五 00:05] SCHEDULED: <2021-05-11 周二 13:08>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:ID:       c3dac9b7-fcba-4dd4-8019-7b591d8981a2
+:ATTACH: [[attachment:liwei_engine.org::#Android][android攻略]]
+:END:
+- State "DONE"       from "TODO"       [2021-05-14 周五 00:05]
+:LOGBOOK:
+CLOCK: [2021-05-11 周二 20:24]--[2021-05-11 周二 20:49] =>  0:25
+CLOCK: [2021-05-11 周二 19:54]--[2021-05-11 周二 20:19] =>  0:25
+CLOCK: [2021-05-11 周二 19:24]--[2021-05-11 周二 19:49] =>  0:25
+CLOCK: [2021-05-11 周二 16:44]--[2021-05-11 周二 17:09] =>  0:25
+CLOCK: [2021-05-11 周二 16:14]--[2021-05-11 周二 16:39] =>  0:25
+CLOCK: [2021-05-11 周二 15:44]--[2021-05-11 周二 16:09] =>  0:25
+CLOCK: [2021-05-11 周二 15:14]--[2021-05-11 周二 15:39] =>  0:25
+CLOCK: [2021-05-11 周二 14:39]--[2021-05-11 周二 15:04] =>  0:25
+CLOCK: [2021-05-11 周二 14:09]--[2021-05-11 周二 14:34] =>  0:25
+CLOCK: [2021-05-11 周二 13:39]--[2021-05-11 周二 14:04] =>  0:25
+CLOCK: [2021-05-11 周二 13:09]--[2021-05-11 周二 13:34] =>  0:25
+:END:
+*** TODO 配置ios工程
+SCHEDULED: <2021-05-14 周五 00:05>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** WAIT 集成到云效平台自动导出
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:END:
 ** WAIT [#A] M8项目战斗逻辑模块梳理                                  :work:
 SCHEDULED: <2021-04-27 周二 10:30>
 :PROPERTIES:
@@ -273,19 +362,21 @@ CLOCK: [2021-04-27 周二 19:31]--[2021-04-27 周二 19:56] =>  0:25
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :END:
-** DONE [#A] 英雄山关卡界面                                          :work:
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] 英雄山关卡界面                                         :work:
 CLOSED: [2021-05-07 周五 21:07] SCHEDULED: <2021-04-29 周四 15:30> DEADLINE: <2021-05-08 周六 21:00>
 :PROPERTIES:
 :BLOCKER: children
+:ARCHIVE_TIME: 2021-05-09 周日 10:16
 :END:                          
 - State "DONE"       from "SCH"        [2021-05-07 周五 21:07]
-*** DONE 挂机界面优化调整
+**** DONE 挂机界面优化调整
 CLOSED: [2021-04-30 周五 14:12] SCHEDULED: <2021-04-29 周四 15:30>
 :PROPERTIES:                          
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:                          
 - State "DONE"       from "TODO"       [2021-04-30 周五 14:12]
-*** DONE 英雄山关卡场景制作
+**** DONE 英雄山关卡场景制作
 CLOSED: [2021-05-07 周五 21:07] DEADLINE: <2021-05-08 周六 21:00> SCHEDULED: <2021-04-30 周五 14:12>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
@@ -338,7 +429,6 @@ CLOCK: [2021-04-29 周四 15:05]--[2021-04-29 周四 15:30] =>  0:25
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
 ** 学习《Lua程序设计》                                       :learn:future:
 ** 学习 elisp                                                :learn:future:
-** 学习《游戏编程模式》                                      :learn:future:
 ** 温习《流畅的python》                                      :learn:future:
 ** 练习字帖                                                  :learn:future:
 ** 学习英语                                                  :learn:future:
