--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -25,12 +25,18 @@ DEADLINE: <2021-06-12 周六 23:00 +1m> SCHEDULED: <2021-06-12 周六 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-05-16 周日 23:00 ++1w> SCHEDULED: <2021-05-15 周六 18:00 ++1w>
+DEADLINE: <2021-05-23 周日 23:00 ++1w> SCHEDULED: <2021-05-22 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-05-09 周日 10:11]
+:LAST_REPEAT: [2021-05-16 周日 23:32]
 :END:
+- State "DONE"       from "TODO"       [2021-05-16 周日 23:32] \\
+  1. 完成了客户端本地文件读取容错处理
+  2. 完成了ios和android平台真机包的制作
+  ------------------------------------------------
+  ------------------------------------------------
+  1. 这周没完成读书的任务, 下周注意
 - State "DONE"       from "TODO"       [2021-05-09 周日 10:11] \\
   1. 完成了英雄山模块
   2. 完成了英雄山模块的GM功能
@@ -77,7 +83,7 @@ DEADLINE: <2021-05-16 周日 23:00 ++1w> SCHEDULED: <2021-05-15 周六 18:00 ++1
   3. 完成了python的入职考试, python150题.
   4. 初步学习了一下利为引擎, 当然除了开始的几章还有例子可以参考, 后面写的太简略了.
   ------------------------------------------------
-  5. 自行车从家里邮过来之后组好, 送到车店保养.
+  1. 自行车从家里邮过来之后组好, 送到车店保养.
 ** TODO [#A] 每月归档到年度文件                                     :event:
 DEADLINE: <2021-05-30 周日 23:00 ++1m> SCHEDULED: <2021-05-30 周日 09:00 ++1m>
 :PROPERTIES:
@@ -91,7 +97,7 @@ DEADLINE: <2021-05-30 周日 23:00 ++1m> SCHEDULED: <2021-05-30 周日 09:00 ++1
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** WAIT [#B] 购买家具用品 [83%]                                  :shopping:
+** WAIT [#B] 购买家具用品 [87%]                                  :shopping:
 SCHEDULED: <2021-05-10 Mon 09:00>
 :PROPERTIES:
 :COOKIE_DATA: checkbox recursive
@@ -138,12 +144,12 @@ SCHEDULED: <2021-05-10 Mon 09:00>
   - [X] 水杯 ::
   - [X] 剪刀 ::
   - [X] 果盘 ::
-- [-] 家具 [3/7]
+- [-] 家具 [5/7]
   - [X] 床头灯 ::
   - [X] 挂钩 ::
   - [X] 床头柜 ::
-  - [ ] 桌子 ::
-  - [ ] 人体工学椅子 ::
+  - [X] 桌子 ::
+  - [X] 人体工学椅子 ::
   - [ ] 普通凳子 ::
   - [ ] 置物架 ::
 - [-] 其他 [5/6]
