--- a/src/org/gtd/data/c3/dac9b7-fcba-4dd4-8019-7b591d8981a2/liwei_engine.org
+++ b/src/org/gtd/data/c3/dac9b7-fcba-4dd4-8019-7b591d8981a2/liwei_engine.org
@@ -63,6 +63,9 @@ GlobalZ == 0 的其他任何对象(2d对象)
 GlobalZ == 0 且设置了SetIsNoDepthTest(True)的对象(一般来说是3d透明网格对象)及其下挂节点
          ↓   
 GlobalZ > 0 的任何对象
+*** 全局z值是不会传递, 这是有时候设置glz无效的原因
+对父对象设置glz不会影响子对象的glz, 比如图片按钮, 对按钮设置glz不会影响它的图片的glz
+所以按钮还是有可能被覆盖的
 ** UI                                                                  :ui:
 *** 命名
 **** 文件命名
