--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -97,13 +97,14 @@ DEADLINE: <2021-05-30 周日 23:00 ++1m> SCHEDULED: <2021-05-30 周日 09:00 ++1
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** WAIT [#B] 购买家具用品 [87%]                                  :shopping:
-SCHEDULED: <2021-05-10 Mon 09:00>
+** DONE [#B] 购买家具用品 [100%]                                  :shopping:
+CLOSED: [2021-05-19 Wed 18:03] SCHEDULED: <2021-05-10 Mon 09:00>
 :PROPERTIES:
 :COOKIE_DATA: checkbox recursive
 :ORDERED: nil
 :END:
-- [-] 床上用品 [7/8]
+- State "DONE"       from "WAIT"       [2021-05-19 Wed 18:03]
+- [X] 床上用品 [8/8]
   - [X] 床褥 ::
   - [X] 被子 ::
   - [X] 被套 ::
@@ -111,7 +112,7 @@ SCHEDULED: <2021-05-10 Mon 09:00>
   - [X] 枕头 ::
   - [X] 床单 ::
   - [X] 毛毯 ::
-  - [ ] 床刷 ::
+  - [X] 床刷 ::
 - [X] 洗涤用品 [23/23]
   - [X] 洗衣液 ::
   - [X] 洗衣盆 ::
@@ -144,21 +145,21 @@ SCHEDULED: <2021-05-10 Mon 09:00>
   - [X] 水杯 ::
   - [X] 剪刀 ::
   - [X] 果盘 ::
-- [-] 家具 [5/7]
+- [X] 家具 [7/7]
   - [X] 床头灯 ::
   - [X] 挂钩 ::
   - [X] 床头柜 ::
   - [X] 桌子 ::
   - [X] 人体工学椅子 ::
-  - [ ] 普通凳子 ::
-  - [ ] 置物架 ::
-- [-] 其他 [5/6]
+  - [X] 普通凳子 ::
+  - [X] 置物架 ::
+- [X] 其他 [6/6]
   - [X] 自行车水杯 ::
   - [X] 硬板鞋垫 :: 无异味
   - [X] 闹钟 ::
   - [X] 五号电池 ::
   - [X] 电蚊香 ::
-  - [ ] 多功能螺丝套件 ::
+  - [X] 多功能螺丝套件 ::
 ** WAIT [#C] 办理电信宽带业务                                        :event:
 SCHEDULED: <2021-04-10 周六 13:20>
 :PROPERTIES:
